Add favicon and meta tags for improved SEO and branding in base layout

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="/css/content.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
     <title>Rajarshi Samaddar</title>
+    <meta name="description" content="Rajarshi Samaddar's personal website" />
+    <meta name="author" content="Rajarshi Samaddar" />
+    <meta name="keywords" content="Rajarshi Samaddar, Techrahis, Techrahis.com, Techrahis.in, Techrahis.org, Techrahis.net, Techrahis.info, Techrahis.biz, Techrahis.us, Techrahis.ca, Techrahis.au, Techrahis.eu, Techrahis.in, Techrahis.co.in, Techrahis.co.uk, Techrahis.co.us, Techrahis.co.ca, Techrahis.co.au, Techrahis.co.eu" />
   </head>
   <body>
     <main>{{ block "main" . }}{{ end }}</main>
