--- a/static/css/baseof.css
+++ b/static/css/baseof.css
@@ -46,8 +46,13 @@ li {
 }
 
 a {
-  color: #99a1af;
-  text-decoration-color: #1e2939;
+  color: #6b768f;
+  text-decoration-color: #2a3950;
+}
+
+a:hover {
+  color: #e0e0e0;
+  text-decoration-color: #e0e0e0;
 }
 
 .skills {
@@ -57,7 +62,7 @@ a {
 }
 
 .skills span {
-  background: #1e1e1e;
+  background: #2a3244;
   padding: 8px 12px;
   border-radius: 5px;
   font-size: 14px;
@@ -65,13 +70,12 @@ a {
 
 .view-all {
   font-size: 12px;
-  color: #9c9c9c;
-  text-decoration: none;
   margin-left: 10px;
 }
 
-.view-all:hover {
-  text-decoration: underline;
+.back-to-home {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 footer {
@@ -81,15 +85,6 @@ footer {
   font-size: 16px;
   margin-top: 4rem;
   margin-bottom: 2rem;
-}
-
-footer a {
-  color: #6a7282;
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
 }
 
 @media screen and (max-width: 700px) {
